<resources>
    <string name="app_name">Vaktmester</string>
    <string name="language_text_view_choose">Choose your language</string>
    <string name="button_confirm">confirm</string>
    <string name="edit_text_username">Username</string>
    <string name="edit_text_password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="button_login">log in</string>
    <string name="textview_forgot_pass">Forgot your password?</string>
    <string name="hint_email">Your email adress</string>
    <string name="forgot_pass_confirm">Confirm</string>
    <string name="home_buildings">Buildings</string>
    <string name="home_timesheet">Timesheet</string>
    <string name="home_chat">Chat</string>
    <string name="home_tickets">Tickets</string>
    <string name="home_version">Version:</string>
    <string name="popup_profile">Profile</string>
    <string name="popup_change_password">Change Password</string>
    <string name="popup_change_language">Change Language</string>
    <string name="popup_logout">Logout</string>
    <string name="buildings_text_view">Buildings</string>
    <string name="buildings_search_edit_text">Search</string>
    <string name="list_item_building_name">Building name</string>
    <string name="list_item_tasks">2 tasks</string>
    <string name="list_item_adress">Bul. Mihajla Pupina 183,Novi Beograd</string>
    <string name="building_details_tickets">Tickets</string>
    <string name="building_detail_supplier">Supplier</string>
    <string name="building_detail_documents">Documents</string>
    <string name="building_details_view_map">View on map</string>
    <string name="tasks_building_details">2 tasks</string>
    <string name="building_name_building_details">Building name</string>
    <string name="adress_building_details">Bul. Mihajla Pupina 183, Novi Beograd</string>
    <string name="building_description_building_details">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using It is a long established fact that a reader will be distracted by the readable content established fact that a reader…</string>
    <string name="read_more_building_details">Read more</string>
    <string name="contact_person_building_details">Contact person</string>
    <string name="contact_name_building_details">John Doe</string>
    <string name="contact_num_building_details">+ 381 011 9425 925</string>
    <string name="title_activity_building_map">Map</string>
    <string name="building_tickets_name_phone">John Doe, +381 294 241 231</string>
    <string name="building_active_filters">Active filters:</string>
    <string name="building_tickets_horizontal_janitors">Janitors</string>
    <string name="tickets_janitor">Janitor</string>
    <string name="tickets_ticket_name">Ticket name</string>
    <string name="text_view_prompt_created">Created: </string>
    <string name="prompt_started">Started: </string>
    <string name="prompt_status">Status: </string>
    <string name="prompt_priority">Priority: </string>
    <string name="filters_tickets">Tickets</string>
    <string name="filters_status">Status</string>
    <string name="filters_normal">Normal</string>
    <string name="filter_adapter_status">Status</string>
    <string name="filter_adapter_priority">Priority</string>
    <string name="filter_adapter_category">Category</string>
    <string name="edit_ticket">Edit ticket</string>
    <string name="task_name">Task name</string>
    <string name="write_description">Write description</string>
    <string name="spinner_borretslag">Borretslag name</string>
    <string name="building_name_spinner">Building name</string>
    <string name="spinner_item_priority">Priority:</string>
    <string name="category_spinner">Category:</string>
    <string name="date_added_edit_ticket">Date added:</string>
    <string name="date_created">Date created:</string>
    <string name="date_ended">Date ended:</string>
    <string name="status_spinner">Status:</string>
    <string name="edit_ticket_created_by">Created By</string>
    <string name="edit_task_updated_by">Updated By</string>
    <string name="edit_ticket_estimated_time">Estimated Time</string>
    <string name="log_time">Log time</string>
    <string name="log_time_hours_mins">Log time: </string>
    <string name="zero_zero">00</string>
    <string name="write_comment_log">Write Comment</string>
    <string name="log_total_time">Total Spent Time:</string>
    <string name="spent_time_log">14 hours</string>
    <string name="report_button_log">Report</string>

</resources>
